test/source/carehub/main/default/objects/ContactContactRelationship__c/ContactContactRelationship__c.object-meta.xml
<CustomObject>
    <label>Contact to Contact Relationship</label>
    <nameField>
        <label>Contact to Contact Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact to Contact Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>