test/source/carehub/main/default/objects/ContactContactRelationship__c/fields/RelatedContactId__c.field-meta.xml
<CustomField>
    <fullName>RelatedContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Related Contact-Contact Relationships</relationshipLabel>
    <relationshipName>RelatedContactContactRelationships</relationshipName>
    <type>Lookup</type>
</CustomField>