test/source/carehub/main/default/objects/ContactContactRelationship__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ContactId__c</columns>
    <columns>RelatedContactId__c</columns>
    <columns>Type__c</columns>
    <columns>Relationship__c</columns>
    <columns>Order__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>